// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bar using SVG should render correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot bar"
      clip-path="url(#clip-path-test)"
    >
      <rect
        aria-label="A: 5"
        class="bar"
        height="50"
        role="img"
        style="fill: rgba(153, 193, 220, 0.7); opacity: 0.7;"
        tabindex="0"
        width="0"
        x="0"
        y="0"
      />
      <rect
        aria-label="B: 10"
        class="bar"
        height="50"
        role="img"
        style="fill: rgba(153, 193, 220, 0.7); opacity: 0.7;"
        tabindex="0"
        width="0"
        x="0"
        y="50"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Bar using SVG should skip rendering if there is no x scale avaliable 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot bar"
      clip-path="url(#clip-path-test)"
    />
  </svg>
</DocumentFragment>
`;

exports[`Bar using SVG should skip rendering if there is no y scale avaliable 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot bar"
      clip-path="url(#clip-path-test)"
    />
  </svg>
</DocumentFragment>
`;
